--- a/style.css
+++ b/style.css
@@ -315,7 +315,7 @@ top:1px;
 
 .contactText {
   grid-template-area: contactText;
-  grid-column-end:2;
+  grid-column-end: span 2;
   margin-top:30px;
   margin-left:200px;
   justify-content:center;
@@ -324,6 +324,7 @@ top:1px;
 
 .footer {
   grid-template-area: footer;
+  grid-column-end: span 2;
   background-color: #4C444C;
   color:#F1F1F1;
 }
