--- a/style.css
+++ b/style.css
@@ -317,8 +317,6 @@ top:1px;
   grid-template-area: contactText;
   grid-column-end: span 2;
   margin-top:30px;
-  margin-left:200px;
-  justify-content:center;
   text-align:center;
 }
 
@@ -326,6 +324,7 @@ top:1px;
   grid-template-area: footer;
   grid-column-end: span 2;
   background-color: #4C444C;
+  text-align:center;
   color:#F1F1F1;
 }
 
