--- a/style.css
+++ b/style.css
@@ -362,9 +362,13 @@ button:visited {
 
 /*///////////////////////////////////Queries///////////////////////////////////*/
 
-@media screen (max-width: 375px) {
+@media screen and (max-width: 375px) {
   #navtextpadd {
     padding-right:0px;
+  }
+
+  .navText {
+    width:75%;
   }
 }
 
