--- a/style.css
+++ b/style.css
@@ -362,7 +362,7 @@ button:visited {
 
 /*///////////////////////////////////Queries///////////////////////////////////*/
 
-@media screen and (max-width: 375px) {
+@media screen and (max-width: 376px) {
   #navtextpadd {
     margin-right:0px;
     padding-right:0px;
@@ -371,6 +371,26 @@ button:visited {
   .navText {
     width:100%;
   }
+  .CSSGrid {
+      display: grid;
+      grid-template-columns: 50% 50%;
+      grid-template-rows: auto auto auto 675px auto 700px auto auto auto auto;
+      justify-content: center;
+      grid-template-areas:
+      "navLogo navLogo"
+      "navText navText"
+      /*"logoBannerArea logoBannerArea"*/
+      "headerContentText Content"
+      "aboutMeSect aboutMeSect"
+      "aboutMeSectBar  aboutMeSectBar"
+      "casePreview1 casePreview1Pic"
+      "contactMe contactMe"
+      "contactMeContent contactMeContent"
+      "contactText contactText"
+      "footer footer";
+  }
+
+
 }
 
 
