--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     display: grid;
     width: 100%;
     grid-template-columns: 50% 50%;
-    grid-template-rows: auto auto 675px auto 700px auto auto auto auto;
+    grid-template-rows: auto auto 675px auto 700px auto auto auto auto auto;
     justify-content: center;
     grid-template-areas:
     "navLogo navText"
